# ResourcesMonitorPy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh  test.py
app/: config.py  database.py  llm_analyzer.py  main.py  utils.py
app/.streamlit/: config.toml
app/widgets/: __init__.py  base.py  cpu_breakdown.py  cpu_heatmap.py  cpu_per_core.py  interrupt_sources.py  interrupts_ctx_switches.py  process_cpu.py  top_processes.py  windowserver_cpu.py
collector/: collector.py
db/: init.sql
docs/: architecture.md
tests/: conftest.py  test_process_cpu_normalization.py
