[project]
name = "macuianalyzerpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.26.0",
    "debugpy>=1.8.20",
    "litellm>=1.83.14",
    "mysql-connector-python>=8.3.0",
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.22.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.35.0",
    "streamlit-autorefresh>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
